# NeuroDOT_py

./: ._pyproject.toml  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  _images  getting_started.ipynb  pyproject.toml  requirements.txt  setup.py
Data/: params.txt  params2.txt
Pipelines/: Basic_GLM_Notebook.ipynb  Basic_Parcelbased_FC_Notebook.ipynb  NeuroDOT_Full_Processing_Notebook.ipynb  NeuroDOT_Reconstruction_Notebook.ipynb  getting_started.ipynb
Support Files/Atlases/: Segmented_MNI152nl_on_333_py.mat  Segmented_MNI152nl_on_MNI111_py.mat
Support Files/GLM/: readme.txt
Support Files/Regions_and_Parcels/: readme.txt
Support Files/Spectroscopy/: E.mat  PrahlEC.csv  (+1 more)
_images/: readme.txt
benchmarks/: benchmark_reconstruction_subset.py  benchmark_report_2026-03-27.md  reconstruction_cached_standalone.py  reconstruction_standalone.py
doc/: Makefile  conf.py  index.rst
docs/: NeuroDOT_Full_Processing_Notebook.html  NeuroDOT_PreProcessing_Notebook.html  NeuroDOT_Reconstruction_Notebook.html  NeuroDOT_Reconstruction_Notebook.ipynb  conf.py  data_types.html  development.html  fullprocessing.html  genindex.html  getting_started.html  getting_started.ipynb  index.html  objects.inv  preprocessing.html  py-modindex.html  requirements.txt  search.html  tutorials.html
examples/: eg001r__getting_started.py  eg002r__preprocessing.py
neuro_dot/: Analysis.py  DynamicFilter.py  File_IO.py  Light_Modeling.py  Matlab_Equivalent_Functions.py  Reconstruction.py  Spatial_Transforms.py  Temporal_Transforms.py  Visualizations.py  requirements.txt
(+52 files in other folders)
